--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [path]
-input = G:/CG/Package/[スペルメーション] ゾンビのあふれた世界で俺だけが襲われない
+input = G:/CG/Package/Kan-in Tokkyuu Matsuba ~Nikuyoku no Gourmet Kikou~
 output = H:/CG
 
