--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [info]
-scene_index = 0
+scene_index = 55
 
 [path]
-input = Z:/CG/ワガママハイスペック OC
+input = Z:/刃撫魅!～アタシが産みなおしてやんよ!～[☆☆]/刃撫魅!～アタシが産みなおしてやんよ!～
 output = Z:/CG
 
