--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [info]
-scene_index = 124
+scene_index = 15
 
 [path]
-input = Z:/CG\カオスドミナス
+input = Z:/CG\ビッチなあの娘に性活指導! JKビッチ★はめぱこスクールライフ
 output = Z:/CG
 
